got the fragments to work properly using the aciton navigation tools, got to create the layouts

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,5 +12,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/recyclerView" />
+            android:id="@+id/recyclerView"
+            android:background="#EAEAEA" />
 </androidx.constraintlayout.widget.ConstraintLayout>
