--- a/app/src/main/res/layout/list_entry.xml
+++ b/app/src/main/res/layout/list_entry.xml
@@ -10,9 +10,9 @@
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/titleText"
+            android:id="@+id/latText"
             android:layout_marginTop="48dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="336dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -20,11 +20,12 @@
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/latText"
+            android:id="@+id/titleText"
             android:layout_marginTop="48dp"
-            android:layout_marginStart="336dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold" />
 
     <TextView
             android:text="TextView"
