Renamed a bunch of stuff

--- a/app/src/main/res/layout/new_entry_fragment.xml
+++ b/app/src/main/res/layout/new_entry_fragment.xml
@@ -12,7 +12,7 @@
             android:inputType="textMultiLine"
             android:gravity="start|top"
             android:ems="10"
-            android:id="@+id/descField"
+            android:id="@+id/entryDesc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
