--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
             android:id="@+id/FirstFragment"
-            android:name="com.finalproject.FirstFragment"
+            android:name="com.finalproject.ListFragment"
             android:label="@string/first_fragment_label"
-            tools:layout="@layout/fragment_first">
+            tools:layout="@layout/fragment_list">
 
         <action
                 android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -23,9 +23,9 @@
     </fragment>
     <fragment
             android:id="@+id/SecondFragment"
-            android:name="com.finalproject.SecondFragment"
+            android:name="com.finalproject.TaskViewFragment"
             android:label="@string/second_fragment_label"
-            tools:layout="@layout/fragment_second">
+            tools:layout="@layout/fragment_task_view">
 
         <action
                 android:id="@+id/action_SecondFragment_to_FirstFragment"
