--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -7,74 +7,107 @@
         tools:context=".TaskViewFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="411dp"
-            android:layout_height="158dp"
+            android:layout_width="410dp"
+            android:layout_height="177dp"
             android:id="@+id/taskViewTopPane"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07999998">
+            app:layout_constraintVertical_bias="0.0"
+            android:background="#ECECEC"
+            app:layout_constraintHorizontal_bias="0.0">
 
         <TextView
-            android:id="@+id/entryLongText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0.003"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.618"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.633" />
+                android:id="@+id/entryTitleText"
+                android:layout_width="336dp"
+                android:layout_height="44dp"
+                android:text="Title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.219"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.128"
+                android:background="#FFFFFF"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
-            android:id="@+id/entryTitleText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.13"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.244" />
+                android:id="@+id/entryLongText"
+                android:layout_width="70dp"
+                android:layout_height="22dp"
+                android:text="0.003"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.829"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.632"
+                android:background="#FFFFFF" />
 
         <TextView
-            android:id="@+id/entryLatTest"
-            android:layout_width="80dp"
-            android:layout_height="21dp"
-            android:text="entryLatTest"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.151"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.642" />
+                android:id="@+id/entryLatTest"
+                android:layout_width="83dp"
+                android:layout_height="23dp"
+                android:text="entryLatTest"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.253"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.629"
+                android:background="#FFFFFF" />
 
         <Button
-            android:id="@+id/deleteButton"
-            android:layout_width="48dp"
-            android:layout_height="47dp"
-            android:text="X"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.981"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.045" />
+                android:id="@+id/deleteButton"
+                android:layout_width="54dp"
+                android:layout_height="46dp"
+                android:text="X"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.983"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.135" />
+
+        <TextView
+                android:text="Latitude"
+                android:layout_width="57dp"
+                android:layout_height="24dp"
+                app:layout_constraintEnd_toStartOf="@+id/entryLatTest"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/entryLatTest"
+                app:layout_constraintTop_toTopOf="@+id/entryLatTest"
+                android:id="@+id/textView4"
+                app:layout_constraintHorizontal_bias="0.781"
+                app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+                android:text="Longitude"
+                android:layout_width="81dp"
+                android:layout_height="23dp"
+                android:id="@+id/textView3"
+                app:layout_constraintTop_toTopOf="@+id/entryLongText"
+                app:layout_constraintBottom_toBottomOf="@+id/entryLongText"
+                app:layout_constraintEnd_toStartOf="@+id/entryLongText"
+                app:layout_constraintStart_toEndOf="@+id/entryLatTest"
+                app:layout_constraintHorizontal_bias="0.761"
+                app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="413dp"
             android:layout_height="563dp"
-            android:id="@+id/taskViewBottomPane"
+            android:id="@+id/back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.9"
-            app:layout_constraintTop_toBottomOf="@+id/taskViewTopPane">
+            app:layout_constraintVertical_bias="0.888"
+            app:layout_constraintTop_toBottomOf="@+id/taskViewTopPane"
+            android:background="#EDEDED">
 
         <TextView
                 android:layout_width="357dp"
@@ -90,7 +123,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_bias="0.49"
-                app:layout_constraintVertical_bias="0.358" />
+                app:layout_constraintVertical_bias="0.358"
+                android:background="#E4E4E4" />
 
         <Button
                 android:id="@+id/buttonReturn"
