--- a/app/src/main/res/layout/list_entry.xml
+++ b/app/src/main/res/layout/list_entry.xml
@@ -8,20 +8,21 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="22dp"
             android:id="@+id/latText"
-            android:layout_marginTop="48dp"
-            android:layout_marginStart="336dp"
+            android:layout_marginStart="268dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.533" />
 
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/titleText"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,22 +33,52 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/descTest"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.045" />
+            app:layout_constraintHorizontal_bias="0.048" />
 
     <TextView
             android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="112dp"
+            android:layout_height="18dp"
             android:id="@+id/lonText"
             android:layout_marginTop="48dp"
-            android:layout_marginStart="240dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/latText"
-            app:layout_constraintHorizontal_bias="0.052" />
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+            android:text="Latitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/titleText"
+            app:layout_constraintHorizontal_bias="0.385"
+            app:layout_constraintTop_toTopOf="@+id/titleText"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+            android:text="Longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/descTest"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/descTest"
+            app:layout_constraintHorizontal_bias="0.361" />
+
+    <View
+            android:id="@+id/divider"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            tools:layout_editor_absoluteX="1dp"
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
